--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "cobe": "^0.6.5",
     "mongodb": "^6.20.0",
     "next": "15.4.2",
     "react": "19.1.0",
