Abstract upload added.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/blob": "^2.2.0",
     "bootstrap": "^5.3.8",
     "cobe": "^0.6.5",
     "mongodb": "^6.20.0",
